src/styles.css
@font-face {
  font-family: "norse-bold";
  src: url("./fonts/Norse-Bold.otf");
}

@font-face {
  font-family: "ktf-roadbrush";
  src: url("./fonts/KTF-Roadbrush.ttf");
}

:root {
  --primary-clr: #ecf4f9;
  --secondary-clr: #006099;
  --accent-clr: #be4700;
  --text-clr: #ffffff;
}

html, body {
  height: 100%;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: var(--primary-clr);
}

header, footer {
  background-color: var(--secondary-clr);
  color: var(--text-clr);
  padding: 8px;
  
}

h1 {
  display: flex;
  justify-content: center;
  gap: 4px;
  font-family: "norse-bold";
}

h1 > img {
  width: 32px;
  height: 32px;
}

.content {
  display: flex;
  justify-content: center;
}

/* account for padding & border */
.frame {
  width: 340px;
  height: 340px;
  display: flex;
  justify-content: center;
  position: relative;
  border: 10px solid var(--accent-clr);
  padding: 10px;
  border-radius: 15px;
  box-shadow: 0px 2px 6px #000;
}

.slides > img {
  width: 300px;
  height: 300px;
  border-radius: 5px;
  transform-origin: left;
  animation: slide .7s ease-out;
}

.slides > .slide-backward {
  transform-origin: right;
}

@keyframes slide {
  0% {
    transform: scaleX(0);
  }
  100% {
    transform: scaleX(1);
  }
}

.hide {
  display: none;
}

.prev-btn,
.next-btn {
  position: absolute;
  z-index: 2;
  align-self: center;
}

.prev-btn {
  left: 0;
}

.next-btn {
  right: 0;
}

button {
  border: none;
  border-radius: 0 3px 3px 0;
  background-color: var(--accent-clr);
  box-shadow: 0px 2px 6px #000;
  line-height: 0;
}

.next-btn {
  border-radius: 3px 0 0 3px;

}

button:hover {
  opacity: .9;
  cursor: pointer;
}

button > img{
  width: 24px;
  height: 24px;
}

.circles {
  position: absolute;
  bottom: 20px;
  display: flex;
  gap: 5px;
}

.circle {
  padding: 5px;
  border: 1px solid #fff;
  border-radius: 50%;
}

.circle.filled {
  background-color: #fff;
}

footer p {
  font-size: 1rem;
  font-family: "ktf-roadbrush";
  text-align: center;
}

footer a {
  color: inherit;
  display: inline-flex;
  gap: 5px;
}

footer img {
  width: 16px;
  height: 16px;
}

